tests/invalid/random_seed_keyword_arg/main.py
import random

if __name__ == "__main__":
    random.seed(a=1)
